--- a/jupyter/new.ipynb
+++ b/jupyter/new.ipynb
@@ -56,6 +56,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
