--- a/jupyter/CS50_Scratch.ipynb
+++ b/jupyter/CS50_Scratch.ipynb
@@ -499,11 +499,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b56bc661",
+   "execution_count": 7,
+   "id": "6b53223b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Best time to buy and sell stock\n",
+    "# Need to find the biggest difference between 2 days\n",
+    "def max_profit(prices:list) -> int:\n",
+    "    profit = 0\n",
+    "    buy_price = prices[0]\n",
+    "    for curr_price in prices[1:]:\n",
+    "        if curr_price < buy_price and buy_price - curr_price > profit:\n",
+    "            profit = buy_price - curr_price\n",
+    "        if curr_price < buy_price:\n",
+    "            buy_price = curr_price\n",
+    "    return profit\n",
+    "        \n",
+    "    \n",
+    "max_profit([7,1,5,3,6,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a5d2af30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "None\n",
+      "{0: 'a', 1: 'b'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MinStack:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.stack = []\n",
+    "        self.length = 0\n",
+    "        self.smallest_val = float('inf')\n",
+    "# always keeps track of the smallest \n",
+    "        self.min_stack = []\n",
+    "\n",
+    "    def push(self, val: int) -> None:\n",
+    "#         append to regular stack\n",
+    "        self.stack.append(val)\n",
+    "        self.length += 1\n",
+    "\n",
+    "#     remove last elem of stack\n",
+    "    def pop(self) -> None:\n",
+    "        if self.length == 0:\n",
+    "            return\n",
+    "        self.length -= 1\n",
+    "        del self.stack[self.length]\n",
+    "\n",
+    "#     return last elem in stack\n",
+    "    def top(self) -> int:\n",
+    "        if self.length == 0:\n",
+    "            return\n",
+    "        return self.stack[self.length - 1]\n",
+    "\n",
+    "    def getMin(self) -> int:\n",
+    "        if self.length == 0:\n",
+    "            return\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "\n",
+    "# Your MinStack object will be instantiated and called as such:\n",
+    "obj = MinStack()\n",
+    "obj.push('a')\n",
+    "obj.push('b')\n",
+    "obj.push('c')\n",
+    "obj.pop()\n",
+    "param_3 = obj.top()\n",
+    "print(param_3)\n",
+    "param_4 = obj.getMin()\n",
+    "print(param_4)\n",
+    "\n",
+    "print(obj.stack)"
+   ]
   }
  ],
  "metadata": {
