--- a/jupyter/CS50_Scratch.ipynb
+++ b/jupyter/CS50_Scratch.ipynb
@@ -16,6 +16,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "eb51170a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4ba5b2bd",
    "metadata": {},
    "outputs": [],
@@ -533,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "a5d2af30",
    "metadata": {},
    "outputs": [
@@ -541,9 +549,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "stack:  ['z', 'a', 'b', 'c', 'a']\n",
+      "min_stack:  ['z', 'a', 'a', 'a', 'a']\n",
+      "c\n",
       "a\n",
-      "None\n",
-      "{0: 'a', 1: 'b'}\n"
+      "['z', 'a', 'b', 'c']\n"
      ]
     }
    ],
@@ -552,41 +562,51 @@
     "\n",
     "    def __init__(self):\n",
     "        self.stack = []\n",
-    "        self.length = 0\n",
-    "        self.smallest_val = float('inf')\n",
-    "# always keeps track of the smallest \n",
+    "        # always keeps track of the smallest\n",
     "        self.min_stack = []\n",
     "\n",
     "    def push(self, val: int) -> None:\n",
-    "#         append to regular stack\n",
+    "        # append to regular stack\n",
     "        self.stack.append(val)\n",
-    "        self.length += 1\n",
-    "\n",
-    "#     remove last elem of stack\n",
+    "        # append to min stack if it's empty\n",
+    "        if not self.min_stack:\n",
+    "            self.min_stack.append(val)\n",
+    "        # append to min stack if val is smaller than the last elem in min stack\n",
+    "        elif val < self.min_stack[-1]:\n",
+    "            self.min_stack.append(val)\n",
+    "        # otherwise just re-add the smallest element to the end of the stack\n",
+    "        else:\n",
+    "            self.min_stack.append(self.min_stack[-1])\n",
+    "            \n",
+    "    # remove last elem of stack\n",
     "    def pop(self) -> None:\n",
-    "        if self.length == 0:\n",
+    "        if not self.stack:\n",
     "            return\n",
-    "        self.length -= 1\n",
-    "        del self.stack[self.length]\n",
+    "        self.stack.pop()\n",
+    "        self.min_stack.pop()\n",
     "\n",
-    "#     return last elem in stack\n",
+    "    # return last elem in stack\n",
     "    def top(self) -> int:\n",
-    "        if self.length == 0:\n",
+    "        if not self.stack:\n",
     "            return\n",
-    "        return self.stack[self.length - 1]\n",
+    "        return self.stack[-1]\n",
     "\n",
     "    def getMin(self) -> int:\n",
-    "        if self.length == 0:\n",
+    "        if not self.stack:\n",
     "            return\n",
-    "        \n",
-    "        \n",
+    "        return self.min_stack[-1]\n",
     "\n",
     "\n",
     "# Your MinStack object will be instantiated and called as such:\n",
     "obj = MinStack()\n",
-    "obj.push('a')\n",
-    "obj.push('b')\n",
-    "obj.push('c')\n",
+    "obj.push('z')\n",
+    "obj.push(\"a\")\n",
+    "obj.push(\"b\")\n",
+    "obj.push(\"c\")\n",
+    "obj.push(\"a\")\n",
+    "print('stack: ', obj.stack)\n",
+    "print('min_stack: ', obj.min_stack)\n",
+    "\n",
     "obj.pop()\n",
     "param_3 = obj.top()\n",
     "print(param_3)\n",
@@ -594,6 +614,29 @@
     "print(param_4)\n",
     "\n",
     "print(obj.stack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "438d2122",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test\n"
+     ]
+    }
+   ],
+   "source": [
+    "counter = 3\n",
+    "while True:\n",
+    "    product = 'test'\n",
+    "    break\n",
+    "    \n",
+    "print(product)\n"
    ]
   }
  ],
