--- a/jupyter/Practice.ipynb
+++ b/jupyter/Practice.ipynb
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "c4052613",
+   "id": "9c6444f4",
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "9736c431",
+   "id": "abb5945e",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "37a6503b",
+   "id": "3c1b5f30",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "22dfe6e6",
+   "id": "1d6ccc37",
    "metadata": {
     "scrolled": true
    },
@@ -677,8 +677,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "09b64248",
+   "execution_count": 130,
+   "id": "c7cc71f4",
    "metadata": {},
    "outputs": [
     {
@@ -692,20 +692,16 @@
       "right:  4\n",
       "\n",
       " ******\n",
-      "left:  2\n",
+      "left:  3\n",
       "mid:  3\n",
-      "right:  4\n"
+      "right:  4\n",
+      "\n",
+      " ******\n",
+      "left:  4\n",
+      "mid:  4\n",
+      "right:  4\n",
+      "4\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -714,11 +710,11 @@
     "    left = 0\n",
     "    right = len(nums) - 1\n",
     "\n",
-    "    counter = 0\n",
-    "    \n",
-    "    # continue checking as long as left < right\n",
-    "    while left < right:\n",
-    "        mid = floor( (right - left) / 2 ) + left\n",
+    "    # continue checking as long as left <= right\n",
+    "    # <= ensures that we check the first and last elem\n",
+    "    while left <= right:\n",
+    "        # can also use (right + left ) // 2 because \"//\" is floor division\n",
+    "        mid = floor( (right + left) / 2 )\n",
     "        print('\\n ******')\n",
     "        print('left: ', left)\n",
     "        print('mid: ', mid)\n",
@@ -728,20 +724,139 @@
     "            return mid\n",
     "        # move right (ie update left to be mid) if target > nums at midpoint\n",
     "        elif target > nums[mid]:\n",
-    "            left = mid\n",
+    "            left = mid + 1\n",
     "        # move left (ie update right to be mid) if target < nums at midpoint\n",
     "        else:\n",
-    "            right = mid\n",
+    "            right = mid - 1\n",
     "            \n",
-    "        counter += 1\n",
-    "        if counter > 1:\n",
-    "            break\n",
-    "\n",
     "    # Return -1 once you've checked all nums\n",
     "    return -1\n",
     "\n",
     "\n",
-    "search([0,1,2,3,4], 3)"
+    "print(search([0,1,2,3,4], 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "7e799676",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "y = 5\n",
+    "mid = (x+y) // 2\n",
+    "mid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "d6a45b9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def binary_search(nums: list[int], target: int) -> int:\n",
+    "    left = 0\n",
+    "    right = len(nums) - 1\n",
+    "    \n",
+    "    while left <= right:\n",
+    "#        floor division to find mid point\n",
+    "        mid = right + left // 2\n",
+    "        \n",
+    "#         if target is at mid, return mid\n",
+    "        if nums[mid] == target:\n",
+    "            return mid\n",
+    "        \n",
+    "#         move left or right depending if greater or less than targer\n",
+    "        elif target > nums[mid]:\n",
+    "            left = mid + 1\n",
+    "        else:\n",
+    "            right = mid - 1\n",
+    "            \n",
+    "    return -1\n",
+    "        \n",
+    "\n",
+    "binary_search([0,1,2,3,4,5], 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "ba96d2f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 3), (4, 10), (5, 8), (20, 25)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 3), (4, 10), (20, 25)]"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def overlapping_intervals(intervals):\n",
+    "    # handle empty list\n",
+    "    if not intervals:\n",
+    "        return []\n",
+    "    \n",
+    "    # sort the intervals\n",
+    "    intervals.sort()\n",
+    "    \n",
+    "    # iterate through sorted nums\n",
+    "    result = []\n",
+    "    starting_num = intervals[0][0]\n",
+    "    last_num = intervals[0][1]\n",
+    "\n",
+    "    for tup in intervals[1:]:\n",
+    "        if tup[0] > last_num:\n",
+    "            result.append((starting_num, last_num))\n",
+    "            starting_num = tup[0]\n",
+    "            last_num = tup[1]\n",
+    "        else:\n",
+    "            last_num = max(tup[1], last_num)\n",
+    "    \n",
+    "    # add the final tuple\n",
+    "    result.append((starting_num, last_num))\n",
+    "    \n",
+    "    # return the result\n",
+    "    return result\n",
+    "            \n",
+    "        \n",
+    "\n",
+    "overlapping_intervals([(1, 3), (5, 8), (4, 10), (20, 25)])"
    ]
   },
   {
