--- a/jupyter/Practice.ipynb
+++ b/jupyter/Practice.ipynb
@@ -861,6 +861,157 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 185,
+   "id": "fd91901b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isPalindrome(x):\n",
+    "    # Convert the integer to a string\n",
+    "    x_str = str(x)\n",
+    "\n",
+    "    # Compare the string with its reverse\n",
+    "    return x_str == x_str[::-1]\n",
+    "\n",
+    "# Test cases\n",
+    "print(isPalindrome(121))  # Output: True\n",
+    "print(isPalindrome(-121))  # Output: False\n",
+    "print(isPalindrome(10))   # Output: False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "id": "43524fb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isPalindrome(x):\n",
+    "    # Negative numbers and numbers ending with 0 (except 0 itself) are not palindromes\n",
+    "    if x < 0 or (x % 10 == 0 and x != 0):\n",
+    "        return False\n",
+    "\n",
+    "    reversed_half = 0\n",
+    "    # Build the reverse of the second half of x\n",
+    "    while x > reversed_half:\n",
+    "        reversed_half = reversed_half * 10 + x % 10\n",
+    "        x //= 10\n",
+    "\n",
+    "    # When the length of the number is odd, we can get rid of the middle digit by reversed_half // 10\n",
+    "    return x == reversed_half or x == reversed_half // 10\n",
+    "\n",
+    "# Test cases\n",
+    "print(isPalindrome(121))  # Output: True\n",
+    "print(isPalindrome(-121))  # Output: False\n",
+    "print(isPalindrome(10))   # Output: False\n",
+    "print(isPalindrome(100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "id": "b1673b87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_palindrome(x):\n",
+    "    # A negative number cannot be a palindrome\n",
+    "    if x < 0:\n",
+    "        return False\n",
+    "\n",
+    "    # Store the original number to compare later\n",
+    "    original = x\n",
+    "    reversed_number = 0\n",
+    "\n",
+    "    while x > 0:\n",
+    "        # Extract the last digit of the number\n",
+    "        digit = x % 10\n",
+    "        # Add the digit to the reversed number\n",
+    "        reversed_number = reversed_number * 10 + digit\n",
+    "        # Remove the last digit from the original number\n",
+    "        x //= 10\n",
+    "\n",
+    "    # Check if the reversed number is equal to the original number\n",
+    "    return original == reversed_number\n",
+    "\n",
+    "# Test cases\n",
+    "print(is_palindrome(121))  # Output: True\n",
+    "print(is_palindrome(-121))  # Output: False\n",
+    "print(is_palindrome(10))   # Output: False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "id": "f5b4e41c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isPalindrome(x):\n",
+    "    # Negative numbers are not palindromes\n",
+    "    if x < 0:\n",
+    "        return False\n",
+    "    \n",
+    "    original = x\n",
+    "    reversed_num = 0\n",
+    "\n",
+    "    # Reverse the number\n",
+    "    while x > 0:\n",
+    "        digit = x % 10  # Get the last digit\n",
+    "        reversed_num = reversed_num * 10 + digit  # Append the digit to the reversed number\n",
+    "        x //= 10  # Remove the last digit from x\n",
+    "\n",
+    "    # Check if the original number is equal to the reversed number\n",
+    "    return original == reversed_num\n",
+    "\n",
+    "print(isPalindrome(121)) # Output: True\n",
+    "print(isPalindrome(-121)) # Output: False\n",
+    "print(isPalindrome(10)) # Output: False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "58549874",
    "metadata": {},
