--- a/jupyter/Practice.ipynb
+++ b/jupyter/Practice.ipynb
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 206,
    "id": "f5b4e41c",
    "metadata": {},
    "outputs": [
@@ -981,33 +981,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "False\n",
-      "False\n"
+      "24\n"
      ]
     }
    ],
    "source": [
-    "def isPalindrome(x):\n",
-    "    # Negative numbers are not palindromes\n",
-    "    if x < 0:\n",
-    "        return False\n",
-    "    \n",
-    "    original = x\n",
-    "    reversed_num = 0\n",
+    "def roman_to_int(s):\n",
+    "    roman_values = {\n",
+    "        'I': 1,\n",
+    "        'V': 5,\n",
+    "        'X': 10,\n",
+    "        'L': 50,\n",
+    "        'C': 100,\n",
+    "        'D': 500,\n",
+    "        'M': 1000\n",
+    "    }\n",
     "\n",
-    "    # Reverse the number\n",
-    "    while x > 0:\n",
-    "        digit = x % 10  # Get the last digit\n",
-    "        reversed_num = reversed_num * 10 + digit  # Append the digit to the reversed number\n",
-    "        x //= 10  # Remove the last digit from x\n",
+    "    total = 0\n",
+    "    prev_value = 0\n",
     "\n",
-    "    # Check if the original number is equal to the reversed number\n",
-    "    return original == reversed_num\n",
+    "    for c in reversed(s):\n",
+    "        current_value = roman_values[c]\n",
+    "        if current_value < prev_value:\n",
+    "            total -= current_value\n",
+    "        else:\n",
+    "            total += current_value\n",
+    "        prev_value = current_value\n",
     "\n",
-    "print(isPalindrome(121)) # Output: True\n",
-    "print(isPalindrome(-121)) # Output: False\n",
-    "print(isPalindrome(10)) # Output: False"
+    "    return total\n",
+    "\n",
+    "# Example usage:\n",
+    "roman_numeral = \"XXIV\"\n",
+    "result = roman_to_int(roman_numeral)\n",
+    "print(result)  # This will output 27"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f33ca44",
+   "metadata": {},
+   "source": [
+    "Given a mapping of digits to letters (as in a phone number), and a digit string, return all possible letters the number could represent. You can assume each valid number in the mapping is a single digit.\n",
+    "\n",
+    "For example if {“2”: [“a”, “b”, “c”], 3: [“d”, “e”, “f”], …} then “23” should return [“ad”, “ae”, “af”, “bd”, “be”, “bf”, “cd”, “ce”, “cf\"]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "06954d66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def all_possible_letters(mapping: dict, digit_str: str) -> list[str]:\n",
+    "    result = []\n",
+    "    for index\n",
+    "\n",
+    "all_possible_letters({\n",
+    "    '2': ['a', 'b', 'c'],\n",
+    "    '3': ['d', 'e', 'f']\n",
+    "}\n",
+    ",'23'\n",
+    ")"
    ]
   },
   {
