--- a/jupyter/practice2.ipynb
+++ b/jupyter/practice2.ipynb
@@ -2,18 +2,95 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "def timer(func):\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        start_time = time.time()\n",
+    "        result = func(*args, **kwargs)\n",
+    "        end_time = time.time()\n",
+    "        print(f'Funcion {func.__name__} too {end_time - start_time:.4f} seconds')\n",
+    "        return result\n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def example_function(msg):\n",
+    "    for _ in range(1000000):\n",
+    "        pass\n",
+    "    return f'Done with message: {msg}'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n"
+      "Funcion example_function too 0.0160 seconds\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Done with message: hey'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# This is the same as using a decorator\n",
+    "timed_example = timer(example_function)\n",
+    "timed_example('hey')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Funcion example_function2 too 0.0157 seconds\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Done with message: hello world'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@timer\n",
+    "def example_function2(msg):\n",
+    "    for _ in range(1000000):\n",
+    "        pass\n",
+    "    return f'Done with message: {msg}'\n",
+    "\n",
+    "example_function2(msg='hello world')"
+   ]
   },
   {
    "cell_type": "code",
