--- a/jupyter/decorators.ipynb
+++ b/jupyter/decorators.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Funcion example_function too 0.0160 seconds\n"
+      "Funcion example_function too 0.0130 seconds\n"
      ]
     },
     {
@@ -48,7 +48,7 @@
        "'Done with message: hey'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,14 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Funcion example_function2 too 0.0157 seconds\n"
+      "Funcion example_function2 too 0.0115 seconds\n"
      ]
     },
     {
@@ -77,7 +77,7 @@
        "'Done with message: hello world'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,10 +94,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average time: 0.0121 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A more accurate way to measure time is using the timeit module\n",
+    "import timeit\n",
+    "\n",
+    "# use a lambda function to pass arguments to the function\n",
+    "duration = timeit.timeit(lambda: example_function(msg='hello'), number=5)\n",
+    "print(f'Average time: {duration/5:.4f} seconds')"
+   ]
   }
  ],
  "metadata": {
