--- a/jupyter/decorators.ipynb
+++ b/jupyter/decorators.ipynb
@@ -113,6 +113,28 @@
     "duration = timeit.timeit(lambda: example_function(msg='hello'), number=5)\n",
     "print(f'Average time: {duration/5:.4f} seconds')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using decorators in classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Circle:\n",
+    "    def __init__(self, radius):\n",
+    "        self._radius = radius\n",
+    "\n",
+    "    @property\n",
+    "    def radius(self):\n",
+    "        return self._radius"
+   ]
   }
  ],
  "metadata": {
