--- a/jupyter/decorators.ipynb
+++ b/jupyter/decorators.ipynb
@@ -123,17 +123,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Circle:\n",
     "    def __init__(self, radius):\n",
+    "        # Python doesn't striclty enforce private variables, but it is a convention to use _ to indicate that a variable is private\n",
     "        self._radius = radius\n",
     "\n",
     "    @property\n",
     "    def radius(self):\n",
     "        return self._radius"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_circle = Circle(radius=5)\n",
+    "\n",
+    "my_circle._radius = 10"
    ]
   }
  ],
