--- a/jupyter/decorators.ipynb
+++ b/jupyter/decorators.ipynb
@@ -132,6 +132,7 @@
     "        # Python doesn't striclty enforce private variables, but it is a convention to use _ to indicate that a variable is private\n",
     "        self._radius = radius\n",
     "\n",
+    "    # property decorator allows us to access the radius as an attribute instead of a method\n",
     "    @property\n",
     "    def radius(self):\n",
     "        return self._radius"
@@ -139,13 +140,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "my_circle = Circle(radius=5)\n",
     "\n",
-    "my_circle._radius = 10"
+    "# because of the property decorator, we can access the radius as an attribute\n",
+    "print(my_circle.radius)"
    ]
   }
  ],
